# compiler-construction

./: .gitignore
fun/: AUTHORS  Makefile  README  anf.sh  cr.sh  fun.cabal  run.sh
fun/doc/: Makefile  report.tex
fun/examples/: If.lam  IfANF.lam  InfiniteLists.lam  Lists.lam  Prim.tcrr  Rec1.lam  Rec1.tcrr  Rec2.lam  Rec2.tcrr  Slow1.lam  Slow2.lam  foo.lam  sumtake.tcrr  t1.tcrr  t1simpler.tcrr
fun/examples/cr/: Lists.tcrr  NotANF.tcrr  Slow1.tcrr  Slow2.tcrr  shadowing.tcrr  t1.tcrr
fun/examples/hm/: Lists.lam  NotANF.lam  Rec1.lam  Rec2.lam  shadowing.lam  t1.lam
fun/src/: PpCore.hs
fun/src/CCO/: Core.hs
fun/src/CCO/Core/: AG.ag
fun/src/CCO/Core/AG/: ToCoreRun.ag
fun/src/CCO/HM/: Parser.hs
fun/src/CCO/HMToCR/AG/: HMToCR.ag
fun/src/hm-to-anf/: HMToANF.hs
fun/src/hm-to-cr/: HMToCR.hs
fun/src/lib/CCO/: HM.hs  Semantics.hs  SystemF.hs
fun/src/lib/CCO/Core/: AG.hs  Base.hs
fun/src/lib/CCO/Core/AG/: Base.ag  ToCoreRun.ag
fun/src/lib/CCO/HM/: AG.ag  AG.hs  Base.hs  Lexer.hs  Parser.hs  ToANF.hs
fun/src/lib/CCO/HM/AG/: Base.ag  HMToCR.ag  Pos.ag  ToANF.ag
fun/src/lib/CCO/SystemF/: AG.hs  Base.hs
fun/src/lib/CCO/SystemF/AG/: Base.ag  Printing.ag
fun/src/parse-hm-to-anf-to-cr/: DoAllMain.hs
mf/: Makefile  README  mf.cabal
mf/examples/: bc.c  check_div.c  cp1.c  depth.c  fac.c  fib.c  foo.c  func.c  slv.c  while_if.c
mf/src/: AttributeGrammar.ag  Dev.hs  Lexer.x  Main.hs  MonotoneFrameworks.hs  Parser.info  Parser.y
mf/src/AG/: Labeling.ag  MonotoneFramework.ag  MonotoneFrameworks.ag  Pretty.ag  Program.ag
mf/src/Analyses/: Builder.hs  ConstantPropagation.hs  Context.hs  StronglyLiveVariables.hs
mf/src/Analyses/Context/: Callstrings.hs
mf/src/MonotoneFrameworks/: Algorithm.hs  Description.hs  Embellished.hs  Instance.hs  Lattice.hs  MaximumFixpoint.hs
mf/src/Util/: Graphviz.hs  Printing.hs  Visual.hs
