
name:                  mf
version:               0.1.0.0
description:           Project distribution for Mini Project F of the course on
                       Compiler Construction (INFOMCCO) at Utrecht University.
category:              Compilers/Interpreters
license:               BSD3
-- license-file:       LICENSE
author:                Yorick Sijsling, Jarno le Conte and Nico Naus
maintainer:            Jurriaan Hage <J.Hage@uu.nl>
homepage:              http://foswiki.cs.uu.nl/foswiki/Cco/MiniProjects
build-type:            Simple
cabal-version:         >=1.8
extra-source-files:    Makefile,
                       examples/cp1.c,
                       examples/fib.c,
                       src/AttributeGrammar.ag
                       src/AG/Labeling.ag
                       src/AG/MonotoneFrameworks.ag
                       src/AG/Program.ag
                       src/Lexer.x
                       src/Parser.y

executable mf
  main-is:             Main.hs
  other-modules:       Lexer
                       Parser
                       Dev
                       AttributeGrammar
                       Analyses.Builder
                       Analyses.ConstantPropagation
                       Analyses.StronglyLiveVariables
                       Analyses.Context
                       Analyses.Context.Callstrings
                       MonotoneFrameworks.Algorithm
                       MonotoneFrameworks.Description
                       MonotoneFrameworks.Embellished
                       MonotoneFrameworks.Lattice
                       Util.Graphviz
                       Util.Printing
  build-depends:       base >= 4 && < 5,
                       containers == 0.5.*,
                       array == 0.5.*,
                       uu-cco,
                       mtl,
                       text,
                       transformers
  ghc-options:         -Wall
  ghc-prof-options:    -prof
                       -fprof-auto
                       -fprof-cafs
  hs-source-dirs:      src                     